--- a/css/tategaki.css
+++ b/css/tategaki.css
@@ -1,470 +1,424 @@
 html,body {
 	background-color: rgba(245,245,245,.8);
 }
-#site_title {
-	background-color: rgba(0,255,255,.8);
-	text-align: center;
-	position: fixed;
-	top: 0px;
-	right: 0px;
-	font-size: 30px;
-	font-style: italic;
-	z-index: 30;
-	width: 250px;
-	margin: 0 auto;
-	border-radius: 10px;
-}
-#file_title {
-	background-color: #F0FFF0;
-	font-size: 20px;
-	position: relative;
-	top: 0px;
-	left: 0px;
-	border-radius: 5px;
-	text-align: center;
-	border-color: rgba(255,127,80,.6);
-	display: block;
-}
-#command.active {
-	display: block;
-}
-#command {
-	position: fixed;
-	bottom: 0px;
-	left: 0px;
-	width: 100%;
-	background-color: yellow;
-	z-index: 50;
-	display: none;
-}
-#app_container {
-	background-color: rgba(245,245,245,.8);
-	width: 1800px;
-	height: 90%;
-	position: absolute;
-	top: 80px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
-	margin: 0 auto;
-	text-align: center;
-}
-.menubar {
-	text-align: left;
-	background-color: yellow;
-	height: 20px;
-}
-.menu-file {
-	text-align: left;
-	background-color: grey;
-	height: 25px;
-	width: 100px;
-	margin-bottom: 0px;
-	font-size: 20px;
-}
-#doc_info {
-	background-color: yellow;
-	position: fixed;
-	bottom: 0;
-	left: 0px;
-	width: 100%;
-	text-align: center;
-	z-index: 7;
-}
-#header {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 30px;
-	background-color: rgba(211,211,211,.8);
-	border-bottom-color: rgba(169,169,169,.8);
-}
-menu[type="toolbar"] {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	background-color: grey;
-}
-#sentence_container {
-	border: 1px brown;
-	cursor: vertical-text;
-	top: -200px;
-	right: 0px;
-	background-color: white;
-	margin: 0 auto;
-	overflow: hidden;
-	z-index: 5;
-	padding: 2.5% 2.5% 2.5% 2.5%;
-	border: 1px solid #222;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset,
-	0 0 5px rgba(0,0,0,0.3) inset,
-	0 1px 2px rgba(0,0,0,0.3);
-	border-radius: 3px;
-	width: 825px;
-	height: 1200px;
-	position: relative;
-	transform: rotate(90deg);
-}
-.paragraph {
-	overflow: visible;
-}
-.paragraph > .row:last-child::after {
-	content: '↓';
-	position: relative;
-	color: grey;
-	border: 1px grey solid;
-	display: inline-block;
-	width: 15px;
-	height: 17px;
-	font-size: 6px;
-	right: 17px;
-	bottom: 2px;
-	padding-left: 4px;
-}
-.row {
-	border: 1px gray dashed;
-	position: relative;
-	color: black;
-	padding: 0 0 0 0;
-	text-align: left;
-	margin: auto 0;
-	width: 730px;
-	height: auto;
+/*
+ * navbar
+ */
+	.navbar-default {
+		height: 40px;
+		z-index: 30;
+	}
+	#user_info {
+		width: 400px;
+		height: 40px;
+	}
+	.modal-backdrop.fade.in.none_modal-backdrop {
+		opacity: 0;
+	}
+	#file_list_modal.command-modal .modal-title-open {
+		display: none;
+	}
+	ul.nav.navbar-nav .input-group {
+		width: 140px;
+	}
+	ul.nav.navbar-nav div.input-group-btn {
+		width: auto;
+	}
 
-}
-.char {
-	border: 1px rgba(0,0,0,0) dashed;
-	position: relative;
-	transform: rotate(-90deg);
-	vertical-align: middle;
-	bottom: 2px;
-}
-#sentence_container > .paragraph > .row {
-	display: none;
-	overflow: visible;
-	white-space: nowrap;
-	border-left: 2px grey solid;
-	border-right: 2px grey solid;
-}
-#sentence_container .char {
-	display: none;
-	line-height: 15px;
-}
-#sentence_container > .paragraph > .row.display {
-	display: block;
-}
-#sentence_container .row > .char.display {
-	display: inline-block;
-}
-#sentence_container .EOL.char {
-	width: 20px;
-	height: 20px;
-}
-.cursor{
-	border-top: 1px black solid;
-	-webkit-animation-name: blinking-cursor;
-	-webkit-animation-duration: 1s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-delay: .1;
-	-webkit-animation-iteration-count: infinite;
-}
-@-webkit-keyframes blinking-cursor {
-	0%{
-	border-top: 1px black solid;
+	/*
+	 * command line
+	 */
+	#command.active {
+		display: block;
 	}
-	50%{
-	border-top: 1px rgba(0,0,0,0) dashed;
+	#command {
+		position: fixed;
+		bottom: 0px;
+		left: 0px;
+		width: 100%;
+		background-color: yellow;
+		z-index: 50;
+		display: none;
 	}
-}
-@-webkit-keyframes blinking-cursor-left {
-	0%{
-	border-left: 1px black solid;
+	.modal-title-command {
+		display: none;
 	}
-	50%{
-	border-left: 1px rgba(0,0,0,0) dashed;
+	#file_list_modal.command-modal .modal-title-command {
+		display: block;
 	}
-}
-.vertical-dot {
-	position: relative;
-	top: -12px;
-	right: 5px;
-}
-.cursor.vertical-dot {
-	border-top: 1px rgba(0,0,0,0) dashed;
-	-webkit-animation-name: none;
-}
-.cursor.vertical-dot::before{
-	content: '';
-	border-top: 1px black solid;
-	position: absolute;
-	top: 8px;
-	right: 5px;
-	width: 20px;
-	height: 5px;
-	-webkit-animation-name: blinking-cursor;
-	-webkit-animation-duration: 1s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-delay: .1;
-	-webkit-animation-iteration-count: infinite;
-}
-.character-line {
-	transform: none;
-	-webkit-animation-name: blinking-cursor-left;
-}
-.character-line.cursor {
-	border-top: 1px yellowgreen dashed;
-	border-left: 1px black solid;
-}
-.vertical-before-bracket {
-	transform: none;
-	position: relative;
-	padding-left: 8px;
-	padding-bottom: 8px;
-}
-.vertical-after-bracket {
-	transform: none;
-	position: relative;
-	left: 3px;
-}
-.vertical-before-kagi-bracket {
-	transform: none;
-	position: relative;
-	padding-left: 3px;
-}
-.vertical-after-kagi-bracket {
-	transform: none;
-	position: relative;
-}
-.decolation-font-big > .cursor.vertical-before-bracket::before{
-	content: '';
-	transform: rotate(-90deg);
-	border-top: 1px black solid;
-	position: absolute;
-	bottom: 5px;
-	left: 1px;
-	width: 45px;
-}
-.vertical-before-bracket.cursor,.vertical-before-kagi-bracket.cursor {
-	border-top: 1px rgba(0,0,0,0) dashed;
-	-webkit-animation-name: blinking-cursor-left;
-}
-.vertical-after-bracket.cursor,.vertical-after-kagi-bracket.cursor {
-	border-top: 1px rgba(0,0,0,0) dashed;
-	-webkit-animation-name: blinking-cursor-left;
-}
-#sentence_container > .paragraph > .row:first-child {
-}
-.row.page-break {
-	border-top: 2px grey solid;
-}
-#input_buffer {
-	width: 20px;
-	position: fixed;
-	z-index: 10;
-	box-shadow: 3px 2px;
-	display: none;
-	background: rgba(0,0,0,.1);
-}
-#input_buffer:before, #input_buffer:after {
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-}
-#input_buffer:before {
-	top: 0;
-	left: 0;
-	z-index: -10;
-	background: #f5f5f5;
-}
-#input_buffer:after {
-	top: 4px;
-	left: 4px;
-	z-index: -20;
-	background: rgba(0,0,0,0.2);
-	box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-}
-#convert_container {
-	width: 180px;
-	position: fixed;
-	z-index: 10;
-}
-.convert-view {
-	width: 180px;
-	z-index: -10;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	display: none;
-}
-.convert-view.active {
-	z-index: 10;
-	display: block;
-}
-.convert-view:before, .convert-view:after {
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-}
-.convert-view:before {
-	top: 0;
-	left: 0;
-	z-index: -10;
-	background: #f5f5f5;
-}
-.convert-view:after {
-	top: 4px;
-	left: 4px;
-	z-index: -20;
-	background: rgba(0,0,0,0.2);
-	box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-}
-.convert-view > .row {
-	border: none;
-	float: right;
-	overflow: hidden;
-	height: auto;
-	width: auto;
-}
-.convert-view > .row > .char {
-	border: none;
-	float: left;
-	clear: left;
-	transform: none;
-}
-.convert-view.active > .row.select {
-	background-color: #99ccff;
-}
-.phrase-num{
-	display: none;
-}
-#input_buffer > .char.select-phrase {
-	background-color: #ffff99;
-}
-.alphabet {
-	padding-left: 5px;
-	padding-bottom: 2px;
-}
-#input_buffer .alphabet{
-	padding-left: 5px;
-}
-.number {
-	padding-left: 2px;
-}
-.yoin {
-	padding-left: 4px;
-}
-#input_buffer .char {
-	left: 0px;
-	transform:none;
-	float: right;
-}
-#input_buffer .vertical-before-kagi-bracket {
-	transform: rotate(90deg);
-	position: relative;
-	left: 4px;
-	top: 4px;
-}
-#input_buffer .vertical-after-kagi-bracket {
-	transform: rotate(90deg);
-	position: relative;
-	left: 4px;
-	top: 4px;
-}
-#input_buffer .vertical-dot {
-	left: 9px;
-}
-#input_buffer > .character-line {
-	border: none;
-	padding-top: 3px;
-	transform: rotate(90deg);
-	left: 3px;
-	top: 2px;
-}
-#input_buffer > .vertical-before-bracket {
-	transform: rotate(90deg);
-}
-#input_buffer > .vertical-after-bracket {
-	transform: rotate(90deg);
-}
-button {
-	display: table-cell;
-	vertical-align: middle;
-}
-.button_container {
-	display: inline;
-}
-#input > p {
-	margin:0 0 0 0;
-}
-#input:focus {
-	background: green;
-}
-.data{
-	display: none;
-}
-#user_info {
-	width: 400px;
-	height: 40px;
-}
-.modal-backdrop.fade.in.none_modal-backdrop {
-	opacity: 0;
-}
-.modal-title-open {
-}
-#file_list_modal.command-modal .modal-title-open {
-	display: none;
-}
-.modal-title-command {
-	display: none;
-}
-#file_list_modal.command-modal .modal-title-command {
-	display: block;
-}
-#file_list_modal.command-modal .form-group {
-	display: none;
-}
-#file_list_modal.command-modal .modal-dialog {
-	position: absolute;
-	bottom: 0px;
-}
-#file_list_modal.command-modal .modal-content {
-}
-#help_tabs > ul.tab-body {
-	display: none;
-}
-#help_tabs > ul.tab-body.current-tab{
-	display: block;
-}
-.navbar-default {
-	height: 40px;
-}
-#search{
-	display: none;
-	position: fixed;
-	bottom: 30px;
-	left: 0px;
-	background-color: yellow;
-	width: 100%;
-	z-index: 20;
-}
-#search.active {
-	display: block;
-}
-.search-word {
-	color: white;
-	background-color: #33cc33;
-}
+	#file_list_modal.command-modal .form-group {
+		display: none;
+	}
+	#file_list_modal.command-modal .modal-dialog {
+		position: absolute;
+		bottom: 0px;
+	}
 
-ul.nav.navbar-nav div.input-group-btn {
-	width: auto;
-}
-ul.nav.navbar-nav .input-group {
-	width: 140px;
-}
+	#app_container {
+		background-color: rgba(245,245,245,.8);
+		width: 1800px;
+		height: 90%;
+		position: absolute;
+		top: 80px;
+		left: 0px;
+		right: 0px;
+		bottom: 0px;
+		margin: 0 auto;
+		text-align: center;
+	}
+	#file_title {
+		background-color: #F0FFF0;
+		font-size: 20px;
+		position: relative;
+		top: 0px;
+		left: 0px;
+		border-radius: 5px;
+		text-align: center;
+		border-color: rgba(255,127,80,.6);
+		display: block;
+	}
+	#doc_info {
+		background-color: yellow;
+		position: fixed;
+		bottom: 0;
+		left: 0px;
+		width: 100%;
+		text-align: center;
+		z-index: 7;
+	}
+
+	#sentence_container {
+		border: 1px brown;
+		cursor: vertical-text;
+		top: -200px;
+		right: 0px;
+		background-color: white;
+		margin: 0 auto;
+		overflow: hidden;
+		z-index: 5;
+		padding: 2.5% 2.5% 2.5% 2.5%;
+		border: 1px solid #222;
+		box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset,
+		0 0 5px rgba(0,0,0,0.3) inset,
+		0 1px 2px rgba(0,0,0,0.3);
+		border-radius: 3px;
+		width: 825px;
+		height: 1200px;
+		position: relative;
+		transform: rotate(90deg);
+	}
+
+	.paragraph {
+		overflow: visible;
+	}
+	.paragraph > .row:last-child::after {
+		content: '↓';
+		position: relative;
+		color: grey;
+		border: 1px grey solid;
+		display: inline-block;
+		width: 15px;
+		height: 17px;
+		font-size: 6px;
+		right: 17px;
+		bottom: 2px;
+		padding-left: 4px;
+	}
+
+	.row {
+		border: 1px gray dashed;
+		position: relative;
+		color: black;
+		padding: 0 0 0 0;
+		text-align: left;
+		margin: auto 0;
+		width: 730px;
+		height: auto;
+
+	}
+	#sentence_container > .paragraph > .row {
+		display: none;
+		overflow: visible;
+		white-space: nowrap;
+		border-left: 2px grey solid;
+		border-right: 2px grey solid;
+	}
+	.row.page-break {
+		border-top: 2px grey solid;
+	}
+	#sentence_container > .paragraph > .row.display {
+		display: block;
+	}
+
+	.char {
+		border: 1px rgba(0,0,0,0) dashed;
+		position: relative;
+		transform: rotate(-90deg);
+		vertical-align: middle;
+		bottom: 2px;
+	}
+	#sentence_container .char {
+		display: none;
+		line-height: 15px;
+	}
+	#sentence_container .EOL.char {
+		width: 20px;
+		height: 20px;
+	}
+	#sentence_container .row > .char.display {
+		display: inline-block;
+	}
+	#input_buffer .char {
+		left: 0px;
+		transform:none;
+		float: right;
+	}
+
+	.cursor {
+		border-top: 1px black solid;
+		-webkit-animation-name: blinking-cursor;
+		-webkit-animation-duration: 1s;
+		-webkit-animation-timing-function: linear;
+		-webkit-animation-delay: .1;
+		-webkit-animation-iteration-count: infinite;
+	}
+	@-webkit-keyframes blinking-cursor {
+		0%{
+			border-top: 1px black solid;
+		}
+		50%{
+			border-top: 1px rgba(0,0,0,0) dashed;
+		}
+	}
+
+	/*
+	 * 特殊文字
+	 */
+	/* 句読点 */
+	.vertical-dot {
+		position: relative;
+		top: -12px;
+		right: 5px;
+	}
+	.cursor.vertical-dot {
+		border-top: 1px rgba(0,0,0,0) dashed;
+		-webkit-animation-name: none;
+	}
+	#input_buffer .vertical-dot {
+		left: 9px;
+	}
+	.cursor.vertical-dot::before{
+		content: '';
+		border-top: 1px black solid;
+		position: absolute;
+		top: 8px;
+		right: 5px;
+		width: 20px;
+		height: 5px;
+		-webkit-animation-name: blinking-cursor;
+		-webkit-animation-duration: 1s;
+		-webkit-animation-timing-function: linear;
+		-webkit-animation-delay: .1;
+		-webkit-animation-iteration-count: infinite;
+	}
+	/* 伸ばし棒 */
+	.character-line {
+		transform: none;
+		-webkit-animation-name: blinking-cursor-left;
+	}
+	@-webkit-keyframes blinking-cursor-left {
+		0% {
+			border-left: 1px black solid;
+		}
+		50% {
+			border-left: 1px rgba(0,0,0,0) dashed;
+		}
+	}
+	.character-line.cursor {
+		border-top: 1px yellowgreen dashed;
+		border-left: 1px black solid;
+	}
+	#input_buffer > .character-line {
+		border: none;
+		padding-top: 3px;
+		transform: rotate(90deg);
+		left: 3px;
+		top: 2px;
+	}
+	/* 括弧 */
+	.vertical-before-bracket {
+		transform: none;
+		position: relative;
+		padding-left: 8px;
+		padding-bottom: 8px;
+	}
+	.vertical-before-kagi-bracket {
+		transform: none;
+		position: relative;
+		padding-left: 3px;
+	}
+	.vertical-before-bracket.cursor,.vertical-before-kagi-bracket.cursor {
+		border-top: 1px rgba(0,0,0,0) dashed;
+		-webkit-animation-name: blinking-cursor-left;
+	}
+	#input_buffer > .vertical-before-bracket {
+		transform: rotate(90deg);
+	}
+	#input_buffer .vertical-before-kagi-bracket {
+		transform: rotate(90deg);
+		position: relative;
+		left: 4px;
+		top: 4px;
+	}
+	.vertical-after-bracket {
+		transform: none;
+		position: relative;
+		left: 3px;
+	}
+	.vertical-after-kagi-bracket {
+		transform: none;
+		position: relative;
+	}
+	#input_buffer > .vertical-after-bracket {
+		transform: rotate(90deg);
+	}
+	#input_buffer .vertical-after-kagi-bracket {
+		transform: rotate(90deg);
+		position: relative;
+		left: 4px;
+		top: 4px;
+	}
+	.vertical-after-bracket.cursor,.vertical-after-kagi-bracket.cursor {
+		border-top: 1px rgba(0,0,0,0) dashed;
+		-webkit-animation-name: blinking-cursor-left;
+	}
+
+	.alphabet {
+		padding-left: 5px;
+		padding-bottom: 2px;
+	}
+	#input_buffer .alphabet {
+		padding-left: 5px;
+	}
+	.number {
+		padding-left: 2px;
+	}
+	.yoin {
+		padding-left: 4px;
+	}
+
+	/*
+	 * inputBuffer
+	 */
+
+	#input_buffer {
+		width: 20px;
+		position: fixed;
+		z-index: 10;
+		box-shadow: 3px 2px;
+		display: none;
+		background: rgba(0,0,0,.1);
+	}
+	#input_buffer:before, #input_buffer:after {
+		position: absolute;
+		content: "";
+		width: 100%;
+		height: 100%;
+	}
+	#input_buffer:before {
+		top: 0;
+		left: 0;
+		z-index: -10;
+		background: #f5f5f5;
+	}
+	#input_buffer:after {
+		top: 4px;
+		left: 4px;
+		z-index: -20;
+		background: rgba(0,0,0,0.2);
+		box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+		-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+		-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+	}
+	#input_buffer > .char.select-phrase {
+		background-color: #ffff99;
+	}
+
+	/*
+	 * convert
+	 */
+	#convert_container {
+		width: 180px;
+		position: fixed;
+		z-index: 10;
+	}
+	.convert-view {
+		width: 180px;
+		z-index: -10;
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		display: none;
+	}
+	.convert-view.active {
+		z-index: 10;
+		display: block;
+	}
+	.convert-view:before {
+		top: 0;
+		left: 0;
+		z-index: -10;
+		background: #f5f5f5;
+	}
+	.convert-view:after {
+		top: 4px;
+		left: 4px;
+		z-index: -20;
+		background: rgba(0,0,0,0.2);
+		box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+		-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+		-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+	}
+	.convert-view:before, .convert-view:after {
+		position: absolute;
+		content: "";
+		width: 100%;
+		height: 100%;
+	}
+	.convert-view > .row {
+		border: none;
+		float: right;
+		overflow: hidden;
+		height: auto;
+		width: auto;
+	}
+	.convert-view > .row > .char {
+		border: none;
+		float: left;
+		clear: left;
+		transform: none;
+	}
+	.convert-view.active > .row.select {
+		background-color: #99ccff;
+	}
+
+	/*
+	 * 語句検索
+	 */
+	#search {
+		display: none;
+		position: fixed;
+		bottom: 30px;
+		left: 0px;
+		background-color: yellow;
+		width: 100%;
+		z-index: 20;
+	}
+	#search.active {
+		display: block;
+	}
+	.search-word {
+		color: white;
+		background-color: #33cc33;
+	}
+
